[package]
name = "host-chan"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
config = "0.11.0"